boinc (5.10.30-3) unstable; urgency=low

  * NOT RELEASED YET

  [ Frank S. Thomas ]
  * debian/patches/:
    - Renamed 201_missing_headers_for_gcc4.3.patch to 102_... because it has
      been applied upstream in r14436.

 -- Frank S. Thomas <fst@debian.org>  Fri, 21 Dec 2007 22:46:55 +0100

boinc (5.10.30-2) unstable; urgency=low

  [ Frank S. Thomas ]
  * debian/rules: Wrote get-orig-source target which fetches the latest tagged
    BOINC version.
  * debian/patches/:
    - Added 201_missing_headers_for_gcc4.3.patch which adds missing C++
      headers to several source files. This is required to fix a FTBFS with
      recent GCC 4.3 snapshots. Thanks to Martin Michlmayr <tbm@cyrius.com>
      for the bug report. (closes: #456041)
    - Added 101_fix_memory_detection_on_kfreebsd.patch from upstream r14415
      based on a patch by Andrew Deason <adeason2@uiuc.edu> which fixes memory
      detection on Debian GNU/kFreeBSD. (closes: #456586)

 -- Frank S. Thomas <fst@debian.org>  Thu, 20 Dec 2007 06:23:54 +0100

boinc (5.10.30-1) unstable; urgency=low

  [ Frank S. Thomas ]
  * New upstream release.
  * debian/boinc-client.default: Removed --return_results_immediately from the
    example BOINC_OPTS variable, because this command line option is not
    implemented and won't be available in BOINC >= 6.1, see upstream r14280.
  * debian/control:
    - Bumped Standards-Version from 3.7.2 to 3.7.3, no changes required.
    - Changed my maintainer address to fst@debian.org.

  [ Thibaut VARENE ]
  * debian/boinc-client.{init,default}: Added option to enable advanced
    scheduling of the client and its sub-processes by default.
    (closes: #449015)

 -- Frank S. Thomas <fst@debian.org>  Wed, 05 Dec 2007 03:02:28 +0100

boinc (5.10.27-1) unstable; urgency=low

  [ Frank S. Thomas ]
  * New upstream release. (closes: #447929)
    - Handles change in /proc/cpuinfo on powerpc introduced in Linux 2.6.23.
      Thanks to Thibaut VARENE <varenet@debian.org> for the patch.